--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +11,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
+    "mqtt": "^5.10.4",
+    "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   }
 }
